synch window for corhot
